--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ pynvml==11.0.0
 pytools==2021.2.7
 toml==0.10.2
 tomlkit==0.7.2
-torch==1.9.0
-torchvision==0.10.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.9.0+cu111
+torchvision==0.10.0+cu111
+torchaudio==0.9.0
 onnx==1.10.1
 onnxruntime==1.8.1
 click==8.0.1
